[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.poetry]
name = "trajectory"
version = "0.1.1"
description = "Trajectory data lossy compression format based on Google's Encoded Polyline Algorithm Format"
authors = ["B Krishna Chaitanya <bkchaitan94@gmail.com>"]
readme = "README.rst"
license = "MIT"
packages = [
    { include = "trajectory" },
]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Plugins",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Scientific/Engineering :: GIS",
]
keywords=["geo", "gis", "postgres", "mobility", "trajectory", "spatiotemporal"]
homepage = "https://github.com/adonmo/trajectory"
repository = "https://github.com/adonmo/trajectory"
documentation = "https://github.com/adonmo/trajectory"

[tool.poetry.dependencies]
python = ">=3.6"
six = "^1.14.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.1.0"
black = "^19.10b0"
pytest = "^5.3.5"
dephell = "0.7.9"
fissix = "^19.2b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
